--- a/index.html
+++ b/index.html
@@ -17,23 +17,34 @@
       </select>
 
       <div class="city">
-        <h2>San Francisco</h2>
-        <div class="date">October 24, 2023</div>
-        <div class="time">1:48:15 PM</div>
+        <div>
+          <h2>San Francisco</h2>
+          <div class="date">October 24, 2023</div>
+        </div>
+        <div class="time">
+          <small> 1:48:15 PM </small>
+        </div>
       </div>
 
       <div class="city">
-        <h2>Paris</h2>
-        <div class="date">October 24, 2023</div>
-        <div class="time">1:48:15 PM</div>
+        <div>
+          <h2>Paris</h2>
+          <div class="date">October 24, 2023</div>
+        </div>
+        <div class="time">
+          <small> 1:48:15 PM </small>
+        </div>
       </div>
 
       <div class="city">
-        <h2>Berlin</h2>
-        <div class="date">October 24, 2023</div>
-        <div class="time">1:48:15 PM</div>
+        <div>
+          <h2>Berlin</h2>
+          <div class="date">October 24, 2023</div>
+        </div>
+        <div class="time">
+          <small> 1:48:15 PM </small>
+        </div>
       </div>
-
       <footer>
         <a href="https://github.com/jleewest" class="code-link" target="blank"
           >Open Source Code</a
@@ -41,6 +52,7 @@
         by Jenna Westendorf
       </footer>
     </div>
+
     <script src="src/index.js"></script>
   </body>
 </html>
