added formatClock function to js

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.43/moment-timezone-with-data-1970-2030.min.js"></script>
     <title>World Clock</title>
   </head>
   <body>
@@ -13,37 +15,31 @@
         <option value="" name="city">Select a city</option>
         <option value="san francisco" name="city">San Francisco</option>
         <option value="paris" name="city">Paris</option>
-        <option value="berlin" name="city">Berlin</option>
+        <option value="sydney" name="city">Sydney</option>
       </select>
 
-      <div class="city">
+      <div class="city" id="sanFrancisco">
         <div>
           <h2>San Francisco</h2>
-          <div class="date">October 24, 2023</div>
+          <div class="date"></div>
         </div>
-        <div class="time">
-          <small> 1:48:15 PM </small>
-        </div>
+        <div class="time"></div>
       </div>
 
-      <div class="city">
+      <div class="city" id="paris">
         <div>
           <h2>Paris</h2>
-          <div class="date">October 24, 2023</div>
+          <div class="date"></div>
         </div>
-        <div class="time">
-          <small> 1:48:15 PM </small>
-        </div>
+        <div class="time"></div>
       </div>
 
-      <div class="city">
+      <div class="city" id="sydney">
         <div>
-          <h2>Berlin</h2>
-          <div class="date">October 24, 2023</div>
+          <h2>Sydney</h2>
+          <div class="date"></div>
         </div>
-        <div class="time">
-          <small> 1:48:15 PM </small>
-        </div>
+        <div class="time"></div>
       </div>
       <footer>
         <a href="https://github.com/jleewest" class="code-link" target="blank"
