added current location function

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <h1>World Clock</h1>
       <select name="city" id="city-select">
         <option value="" name="city">Select a city</option>
+        <option value="current" name="city">My current location</option>
         <option value="US/Pacific" name="city">San Francisco</option>
         <option value="Europe/Paris" name="city">Paris</option>
         <option value="Australia/Sydney" name="city">Sydney</option>
