Updated select element
refresh page on "select city"

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <h1>World Clock</h1>
       <select name="city" id="city-select">
-        <option value="" name="city">Select a city...</option>
+        <option value="search" name="city">Select a city...</option>
         <option value="current" name="city">My current location</option>
         <option value="US/Pacific" name="city">San Francisco</option>
         <option value="Europe/Paris" name="city">Paris</option>
